sdk/base-macros/tests/errors/component_with_attribute.rs
use miden_base_macros::component;

#[component(foo)]
struct Contract;

fn main() {} // trybuild needs `fn main`
