sdk/base-macros/tests/errors/component_with_attribute.stderr
error: #[component] does not accept arguments
 --> tests/errors/component_with_attribute.rs:3:1
  |
3 | #[component(foo)]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
